<resources>
    <string name="app_name">Trip Manager</string>
    <string name="title_home">Travels</string>
    <string name="title_dashboard">Items</string>
    <string name="title_notifications">Locations</string>
    <string name="trips_tab_all">All</string>
    <string name="trips_tab_planned">Planned</string>
    <string name="trips_tab_current">Current</string>
    <string name="trips_tab_past">Past</string>
    <string name="trips_fab_action_trip_text">Trip</string>
    <string name="trips_fab_action_group_text">Trip group</string>
    <string name="title_activity_add_location">Add location</string>
    <string name="addLocation_description_hint">Description</string>
    <string name="addLocation_title_hint">Title</string>
    <string name="title_activity_add_stuff">Add stuff</string>
    <string name="addLocation_Address_hint">Address</string>
    <string name="title_activity_add_trip">Add Trip</string>
    <string name="title_activity_manage_stuff">Manage stuff</string>
    <string name="manageStuff_tab_all_text">All</string>
    <string name="manageStuff_tab_took_text">Taken</string>
    <string name="manageStuff_tab_rest_text">Left</string>
</resources>
